--- a/media/sidebar.css
+++ b/media/sidebar.css
@@ -1,12 +1,14 @@
 :root {
   --red: #d32444;
-  --solana-green: #14f195;
-  --solana-purple: #9945ff;
+  --status-loading: var(--vscode-button-secondaryBackground);
+  --status-connected: var(--vscode-button-background);
+  --status-error: var(--vscode-inputValidation-errorBorder);
+  --status-disabled: var(--vscode-button-secondaryBackground);
 }
 
 .status-box {
   display: flex;
-  margin: 2em auto 0;
+  margin: 4em auto 2em;
   font-size: 1.25em;
   align-items: flex-start;
   justify-content: center;
@@ -14,9 +16,26 @@
 
 .status-box .icon {
   align-items: center;
-  color: #2bcd1d;
+  color: var(--status-disabled);
   margin-right: 0.25em;
 }
+
+.status-box .icon.loading {
+  color: var(--status-loading);
+}
+
+.status-box .icon.connected {
+  color: var(--status-connected);
+}
+
+.status-box .icon.error {
+  color: var(--status-error);
+}
+
+.status-box .icon.disabled {
+  color: var(--status-disabled);
+}
+
 .status-box .icon .codicon {
   font-size: 1.25em;
 }
@@ -50,7 +69,7 @@
 
 .network {
   border: 3px solid var(--vscode-textLink-foreground);
-  margin: 2em 0;
+  margin: 0 0 2em;
   padding: 0.75em 1em 1em;
   border-radius: 8px;
 }
@@ -64,7 +83,10 @@
 .animation-wrapper {
   position: relative;
   height: 100px;
-  margin: 1em auto;
+  margin: 3em auto 0;
+  transform: scale(0.85);
+  margin-top: 40vh;
+  width: 230px;
 }
 
 .circle {
@@ -72,7 +94,7 @@
   width: 20px;
   height: 20px;
   border-radius: 100%;
-  background-color: var(--solana-green);
+  background-color: white;
   animation: move-the-circle 1s infinite;
   transform-origin: center center;
 }
@@ -121,21 +143,21 @@
   0% {
     transform: translate(0, 0) scale(1);
     opacity: 1;
-    background-color: var(--solana-green);
+    background-color: white;
   }
   50% {
     transform: translate(0, 50px) scale(0.4);
     opacity: 0.5;
-    background-color: var(--solana-purple);
+    background-color: var(--vscode-textLink-foreground);
   }
   100% {
     transform: translate(0, 0) scale(1);
     opacity: 1;
-    background-color: var(--solana-green);
+    background-color: white;
   }
 }
 
-.sidebar-wrapper {
+.flex-col {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -143,4 +165,13 @@
 
 .bottom-box {
   margin-top: auto;
+}
+
+.no-cli-box p {
+  margin-bottom: 1em;
+}
+
+hr {
+  border-color: var(--vscode-dropdown-background);
+  margin-bottom: 2em;
 }
