--- a/media/wallet.css
+++ b/media/wallet.css
@@ -1,15 +1,20 @@
 .wallet-card {
   background: var(--vscode-dropdown-border);
   padding: 2em 1.5em;
-  margin: 1em 0 5em;
+  margin: 1em 0 4em;
   border-radius: 20px;
 }
 
 .wallet-box {
+  height: 3em;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 2em;
+}
+
+.wallet-box .title {
+  opacity: 0.5;
 }
 
 .balance-header {
@@ -22,11 +27,28 @@
 
 .wallet-balance {
   display: flex;
-  font-size: 3em;
+  font-size: 2.5em;
   align-items: baseline;
 }
 
 .sol-text {
   font-size: 0.5em;
   margin-left: 0.5em;
+}
+
+.cli-box {
+  display: flex;
+  width: 100%;
+}
+
+.cli-box button {
+  flex: 0;
+  margin-right: 10px;
+}
+
+.cli-version {
+  opacity: 0.5;
+  flex: 1;
+  word-break: break-all;
+  padding-left: 0.5em;
 }
